# coding-with-ai-template

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/.claude/agents/: refactor-scanner.md
{{cookiecutter.project_slug}}/context/: coding-standards-python.md  coding-standards-typescript.md  coding-standards.md  current-feature.md  project-overview.md
{{cookiecutter.project_slug}}/context/features/: feature-template.md
